# GeoVan

./: .env  ARCHITECTURE.md  CMakeLists.txt  Cargo.toml  DEV_SETUP.md  IOT_SETUP_GUIDE.md  LOCAL_DEVELOPMENT.md  QUICKSTART.md  README.md  README_LOCAL.md  README_VEHICLE_SYSTEM.md  docker-compose.yml  package-lock.json  package.json  start-dev.bat  start-dev.sh  vercel.json
api/vehicle/: update.js
frontend/: DEV_README.md  dev-start.bat  dev-start.sh  dev.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/Auth/: ProtectedRoute.tsx
frontend/src/components/Layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/config/: env.ts
frontend/src/contexts/: AuthContext.tsx  SocketContext.tsx  ThemeContext.tsx
frontend/src/pages/Alerts/: Alerts.tsx
frontend/src/pages/Analytics/: Analytics.tsx
frontend/src/pages/Dashboard/: Dashboard.tsx
frontend/src/pages/Login/: Login.tsx
frontend/src/pages/Security/: Security.tsx
frontend/src/pages/Settings/: Settings.tsx
frontend/src/pages/VehicleMap/: VehicleMap.tsx
frontend/src/services/: vehicleService.ts
frontend/src/store/: store.ts
iot-vehicle-node/: auto_setup.py  install.sh  setup_pi.sh  vehicle_node.py
local-backend/: iotServer.js  package-lock.json  package.json  server.js  vehicleWebSocket.js
proto/: geovan.proto
relay/: package.json  relay.js
routes/: delhi_sample.csv
scripts/: test_system.sh
src/: config.rs  core.rs  error.rs  lib.rs  vehicle_agent.cpp
web/: app.js  index.html  styles.css
